# mcp-stem-splitter

./: .gitignore  README.md  pyproject.toml
mcp_stem_splitter/: __init__.py  __main__.py  server.py
tests/: test_tools.py
